# EchoClaw

./: .gitignore  README.md
mini_claude/: .gitignore  pyproject.toml
mini_claude/.claude/skills/: commit.md  deploy.md  refactor.md  review.md  test.md
mini_claude/config/: settings.example.yaml
mini_claude/docs/superpowers/plans/: 2025-04-03-mini-claude-implementation-plan.md
mini_claude/docs/superpowers/specs/: 2025-04-03-mini-claude-design.md
mini_claude/src/: __init__.py  main.py
mini_claude/src/commands/: __init__.py  builtins.py  registry.py
mini_claude/src/config/: __init__.py  settings.py
mini_claude/src/engine/: __init__.py  headless.py  query.py  streaming.py
mini_claude/src/models/: __init__.py  message.py  state.py  tool.py
mini_claude/src/services/: __init__.py  compaction.py  context.py  hooks.py  llm.py  mcp.py  permissions.py  persistence.py  pricing.py
mini_claude/src/tools/: __init__.py  ask_user.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  mcp_tool.py  memory.py  orchestration.py  registry.py  skill.py  task.py  todo.py  web_fetch.py  web_search.py
mini_claude/src/tools/agent/: __init__.py  color.py  runner.py  send_message.py  tool.py
mini_claude/src/tools/knowledge/: __init__.py  base.py  sources.py
mini_claude/src/ui/: __init__.py  app.py  components.py  state_sync.py
mini_claude/src/utils/: __init__.py  files.py  git.py  ids.py
mini_claude/tests/: conftest.py  test_p2_validation.py
mini_claude/tests/integration/: test_full_flow.py
mini_claude/tests/unit/: __init__.py  test_engine.py  test_llm.py  test_services.py  test_tools.py
mini_claw/: .gitignore  pyproject.toml
mini_claw/config/: brain.yaml  settings.example.yaml
mini_claw/deploy/: .env.example  Dockerfile  docker-compose.yml  start.sh  update.sh
mini_claw/docs/: CODECLAW_PLAN.md
mini_claw/script/: __init__.py  config.py  engine_session.py  main.py  workspace_loader.py
mini_claw/script/avatar/: __init__.py  manager.py  models.py  runner.py
mini_claw/script/avatar/presets/: coder.yaml  general.yaml  ops.yaml  unified.yaml
mini_claw/script/brain/: __init__.py  cognitive.py  composer.py  conversation.py  llm_client.py  models.py  planner.py  user_state.py
mini_claw/script/gateway/: __init__.py  base_adapter.py  models.py
mini_claw/script/hands/: __init__.py  engine_executor.py  manager.py  models.py
mini_claw/script/heartbeat/: __init__.py  monitor.py  recovery.py  reporter.py
mini_claw/script/memory/: __init__.py  extractor.py  loader.py  models.py  store.py
mini_claw/script/recovery/: __init__.py  models.py  self_healer.py
mini_claw/script/routine/: builtin.py  models.py  scheduler.py
mini_claw/script/scheduler/: __init__.py  models.py  router.py  task_manager.py
mini_claw/script/soul/: __init__.py  manager.py  models.py
mini_claw/tests/: test_avatar.py  test_bootstrap_refinement.py  test_brain.py  test_engine_session.py  test_gateway.py  test_hands.py  test_heartbeat.py  test_memory.py  test_routine.py  test_scheduler.py  test_webhook.py
mini_claw/web/: index.html  package-lock.json  package.json  vite.config.js
mini_claw/web/src/: App.vue  api.js  main.js  router.js
mini_claw/web/src/stores/: app.js  (+1 more)
mini_claw/workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
mini_claw/workspace/.openclaw/: mood.json
(+24 files in other folders)
