[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini_claude"
version = "0.1.0"
description = "Python implementation of Claude Code core - terminal AI coding assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Claude User"}
]
keywords = ["ai", "llm", "terminal", "coding-assistant", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.30.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "diff-match-patch>=20230430",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "aiofiles>=24.0.0",
    "pathspec>=0.12.0",
    "tiktoken>=0.7.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
mini_claude = "src.main:main"
mclaude = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
collect_ignore_glob = ["*.pem", "tmp*", "pip-*", "venv*"]
